--- a/src/styles/variables/_media-queries.scss
+++ b/src/styles/variables/_media-queries.scss
@@ -2,3 +2,4 @@ $device-x-large: "only screen and (min-width: 1200px)" !default;
 $device-large:   "only screen and (min-width: 992px)" !default;
 $device-medium:  "only screen and (min-width: 768px)" !default;
 $device-small:   "only screen and (min-width: 375px)" !default;
+$media-device-small: 375px;
